--- a/teaching.html
+++ b/teaching.html
@@ -39,7 +39,7 @@
 		<article>
 			<div class="article_image">
 				
-					<img src="img/BCgate.jpg" alt="" title="">
+					<img src="img/BCgate.JPG" alt="" title="">
 				
 			</div>
 			
