--- a/teaching.html
+++ b/teaching.html
@@ -28,7 +28,7 @@
 		
 		<article>
 			<div class="article_image">
-					<img src="#" alt="" title="">
+					<img src="" alt="" title="">
 			</div>				
 			<div class = "post">
 				<h1 class = "title"> <a href = "#" >Teaching Philosophy </a> </h1>
