--- a/teaching.html
+++ b/teaching.html
@@ -27,11 +27,11 @@
 	<section class="main wrapper">
 		
 		<article>
-			<div class="article_image">
-					<img src="" alt="" title="">
-			</div>				
+			
+			<div style="margin-left: 1em;">				
 			<div class = "post">
 				<h1 class = "title"> <a href = "#" >Teaching Philosophy </a> </h1>
+			</div>
 			</div>
 		</article>
 			
