--- a/teaching.html
+++ b/teaching.html
@@ -28,7 +28,8 @@
 		
 		<article>
 			<div class = "post">
-				<h1 class = "title"> <a href = "#" >Teaching Philosophy </a> </h1>
+				<h1 class = "title"> Teaching Philosophy </h1>
+				<a class="read_more" href="#">click here<i class="read_more_arrow"></i> </a>
 			</div>
 		</article>
 			
