--- a/teaching.html
+++ b/teaching.html
@@ -28,8 +28,8 @@
 		
 		<article>
 			<div class = "post">
-				<h1 class = "title"> Teaching Philosophy </h1>
-				<a class="read_more" href="#">click here<i class="read_more_arrow"></i> </a>
+				<h1 class = "title"> Teaching Philosophy   <a class="read_more" href="#"> click here <i class="read_more_arrow"></i> </a>  </h1>
+				
 			</div>
 		</article>
 			
