--- a/teaching.html
+++ b/teaching.html
@@ -27,9 +27,12 @@
 	<section class="main wrapper">
 		
 		<article>
+			<div class="article_image">
+					<img src="img/blank.jpg" alt="" title="">
+			</div>
 			<div class = "post">
-				<h1 class = "title"> Teaching Philosophy   <a class="read_more" href="#"> click here <i class="read_more_arrow"></i> </a>  </h1>
-				
+				<h1 class = "title"> Teaching Philosophy   </h1>
+				<a class="read_more" href="#">.pdf<i class="read_more_arrow"></i> </a>
 			</div>
 		</article>
 			
