--- a/teaching.html
+++ b/teaching.html
@@ -31,8 +31,7 @@
 					<img src="img/blank.jpg" alt="" title="">
 			</div>
 			<div class = "post">
-				<h1 class = "title"> Teaching Philosophy   </h1>
-				<a class="read_more" href="#">.pdf<i class="read_more_arrow"></i> </a>
+				<h1 class = "title"> <a href = "#">Teaching Philosophy </a>  </h1>
 			</div>
 		</article>
 			
