--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
 	
 	
 		<article>
-			<div class = "articl_image">
+			<div class = "article_image">
 					<img_src = "img/blank.jpg" alt = "" title = "">
 			</div>
 			<div class = "post">
