--- a/research.html
+++ b/research.html
@@ -30,13 +30,11 @@
 	
 	
 		<article>
-			<div class = "article_image">
-					<img_src = "img/blank.jpg" alt = "" title = "">
+			<div class="article_image">
+					<img src="img/blank.jpg" alt="" title="">
 			</div>
 			<div class = "post">
-				<h1 class = "title">
-					<a href = "#"> Research Statement </a>
-				</h1>
+				<h1 class = "title"> <a href = "#">Research Statement</a>  </h1>
 			</div>
 		</article>
 	
