--- a/research.html
+++ b/research.html
@@ -37,7 +37,15 @@
 				<h1 class = "title"> <a href = "#">Research Statement</a>  </h1>
 			</div>
 		</article>
-	
+
+		<article>
+			<div class="article_image">
+					<img src="img/blank.jpg" alt="" title="">
+			</div>
+			<div class = "post">
+				<h1 class = "title"> <a href = "#">Job Market Paper</a>  </h1>
+			</div>
+		</article>	
 	
 	
 		<article>
