--- a/research.html
+++ b/research.html
@@ -137,11 +137,11 @@
 
 
 
-
-		<nav class="pagination">
+			
+		<!-- <nav class="pagination"> -->
 		<!--	<a href="#" class="previous"><i></i>Previous</a> -->
 			
-			<a href="presentations.html" class="next">Presentations<i></i></a>
+		<!--	<a href="presentations.html" class="next">Presentations<i></i></a>
 		</nav><!-- Pagination End -->
 		
 		
