--- a/teaching.html
+++ b/teaching.html
@@ -31,7 +31,7 @@
 					<img src="img/blank.jpg" alt="" title="">
 			</div>
 			<div class = "post">
-				<h1 class = "title"> <a href = "#">Teaching Philosophy </a>  </h1>
+				<h1 class = "title"> <a href = "courses/Hauner_teachingPhilosophy.pdf">Teaching Philosophy </a>  </h1>
 			</div>
 		</article>
 			
