--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
 					<img src="img/blank.jpg" alt="" title="">
 			</div>
 			<div class = "post">
-				<h1 class = "title"> <a href = "#">Research Statement</a>  </h1>
+				<h1 class = "title"> <a href = "papers/Hauner_researchStatement.pdf">Research Statement</a>  </h1>
 			</div>
 		</article>
 
