--- a/research.html
+++ b/research.html
@@ -34,8 +34,10 @@
 					<img src="img/blank.jpg" alt="" title="">
 			</div>
 			<div class = "post">
-				<h1 class = "title"> <a href = "papers/Hauner_researchStatement.pdf">Research Statement</a>  </h1>
+				<h1 class = "title"> <a href = "researchstatement.html">Research Statement</a>  </h1>
 			</div>
+			
+			<a class="read_more" href="papers/Hauner_researchStatement.pdf">.pdf <i class="read_more_arrow"></i> </a>
 		</article>
 
 		<article>
