--- a/teaching.html
+++ b/teaching.html
@@ -31,7 +31,8 @@
 					<img src="img/blank.jpg" alt="" title="">
 			</div>
 			<div class = "post">
-				<h1 class = "title"> <a href = "courses/Hauner_teachingPhilosophy.pdf">Teaching Philosophy </a>  </h1>
+				<h1 class = "title"> <a href = "teachingphilosophy.html">Teaching Philosophy </a>  </h1>
+				<a class="read_more" href="courses/Hauner_teachingPhilosophy.pdf">.pdf <i class="read_more_arrow"></i> </a>
 			</div>
 		</article>
 			
