--- a/research.html
+++ b/research.html
@@ -42,10 +42,11 @@
 
 		<article>
 			<div class="article_image">
-					<img src="img/blank.jpg" alt="" title="">
+					<img src="#" alt="" title="">
 			</div>
 			<div class = "post">
-				<h1 class = "title"> <a href = "#">Job Market Paper</a>  </h1>
+				<h1 class = "title"> <a href = "papers/Hauner_JMP.pdf">Job Market Paper</a>  </h1>
+				<a class="read_more" href="papers/Hauner_JMP.pdf">.pdf <i class="read_more_arrow"></i> </a>
 			</div>
 		</article>	
 	
