--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@
 					<img src="#" alt="" title="">
 			</div>
 			<div class = "post">
-				<h1 class = "title"> [Job Market Paper]  A Network Model of Wealth Inequality and Financial Instability  </h1>
+				<h1 class = "title"> [<u>Job Market Paper</u>]  A Network Model of Wealth Inequality and Financial Instability  </h1>
 				<a class="read_more" href="papers/Hauner_JMP.pdf">.pdf <i class="read_more_arrow"></i> </a>
 			</div>
 		</article>	
