--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@
 
 		<article>
 			<div class="article_image">
-					<img src="img/eg3gamma165.png" alt="" title="">
+					<img src="img/eg3gamma165.jpg" alt="" title="">
 			</div>
 			<div class = "post">
 				<h1 class = "title"> [<u>Job Market Paper</u>]  A Network Model of Wealth Inequality and Financial Instability  </h1>
