--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@
 			</div>
 			<div class = "post">
 				<h1 class = "title"> [<u>Job Market Paper</u>]  A Network Model of Wealth Inequality and Financial Instability  </h1>
-				<a class="read_more" href="papers/Hauner_JMP.pdf">.pdf <i class="read_more_arrow"></i> </a>
+				<a class="read_more" href="#">.pdf <i class="read_more_arrow"></i> </a>
 			</div>
 		</article>	
 	
@@ -131,7 +131,7 @@
 				<h1 class="title">
 					CUNY GC Beamer Template				</h1>
 				
-				<p>Free CUNY Graduate Center <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span> Beamer template that I created (based on a University of Copenhagen theme).</p>
+				<p>CUNY Graduate Center <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span> Beamer template that I created (based on a University of Copenhagen theme).</p>
 				
 				<p> To use, download .tex file and .pdf images and place in same folder.</p>
 
