--- a/bzbslides.html
+++ b/bzbslides.html
@@ -11,7 +11,7 @@
 
 	<header>
 		<div class="wrapper">
-			<a href="index.html"><img src="img/th.png" class="h_logo" alt="Blogin" title=""></a>
+			<a href="index.html"><img src="img/th_univers.png" class="h_logo" alt="Blogin" title=""></a>
 			<nav>
 				<ul class="main_nav">
 					<li><a href="index.html">Home</a></li>
