--- a/teaching.html
+++ b/teaching.html
@@ -51,7 +51,7 @@
 				
 				<p> <b> ECO3410: Fundamental Methods of Mathematical Economics I</b> <br> <br></p>
 	
-				<p> <b> <a href = "courses/3410evaluations.html" ><font color = "blue">Student evaluations (all semesters) </font></a></b></p>
+				<p> <b> <a href = "courses/3410evaluations.html" ><font color = "black">Student evaluations (all semesters) </font></a></b></p>
 				
 				<UL type = "square">
 					<LI><p><a href="spring2016.html"><font color="black">Spring 2016</font></a></p>		
