--- a/3410evaluations.html
+++ b/3410evaluations.html
@@ -66,7 +66,7 @@
 						<LI><p> Gained "a fair amount" or "a lot" of ability to analyze and solve problems - 67%</p>
 						<LI><p> Gained "a fair amount" or "a lot" of ability to find and use information independently - 66%</p>
 					</UL>								
-				Note: Numbers based on over 150+ evaluation reponses.
+				<p>Note: Numbers based on over 150+ evaluation reponses.</p>
 							
 				<br><br>
 				<p><b>Select Student Comments</b></p>			
@@ -74,6 +74,7 @@
 						<LI><p>"Professor Hauner is a great professor. He clearly communicates the course material. He has a great understanding of mathematical economics, and is great at relaying his knowledge."</p>
 						<LI><p>"One of the best math teacher I had since coming to Brooklyn College. He very helpful, a great listener and he try to make you understand the lesson even though it very overwhelming at times."</p>	
 						<LI><p>"Wonderful professor to take for ECON 3410. Always available to help students and gives great review sheets before the exams. Made math easy and understandable."</p>	
+						<LI><p>"Professor Hauner is one who is very knowledgeable in the subject. He really goes into detail on formulas, functions and others. Hell map out the formula for you and provide examples and answered all questions without hesitation.</p>
 					</UL>		
 				<br><br>			
 				<p><b> RAW FILES (all semesters)</b></p>			
