--- a/research.html
+++ b/research.html
@@ -34,9 +34,9 @@
 					<img src="img/blank.jpg" alt="" title="">
 			</div>
 			<div class = "post">
-				<h1 class = "title"> <a href = "#">Research Statement</a>  </h1>
+				<h1 class = "title"> <a href = "researchstatement.html">Research Statement</a>  </h1>
 				
-				<a class="read_more" href="#">.pdf <i class="read_more_arrow"></i> </a>
+				<a class="read_more" href="papers/Hauner_researchStatement.pdf">.pdf <i class="read_more_arrow"></i> </a>
 			</div>
 		</article>
 
