--- a/research.html
+++ b/research.html
@@ -97,7 +97,7 @@
 				<p><font color="dark blue">Working Paper:</font> December 2013</p>		
 				
 				<a class="read_more" href="data/ineq_data.xls">Data <i class="read_more_arrow"></i> </a>
-				<a class="read_more" href="papers/econ824_paper.pdf">.pdf <i class="read_more_arrow"></i> </a>
+				<a class="read_more" href="papers/CVARineqFinance.pdf">.pdf <i class="read_more_arrow"></i> </a>
 				<br><br>				
 								
 			</div>
