--- a/researchstatement.html
+++ b/researchstatement.html
@@ -40,6 +40,8 @@
 			
 			<p>With the increasing availability of detailed inequality data, my research creates a new field examining the consequences from changing inequality while simultaneously bridging economic fields and bringing together interdisciplinary researchers. The list below provides brief descriptions of completed research projects, working papers, and ongoing work. </p>	
 			
+			<p>(Please go to the <a href="research.html">research</a> tab for .pdf copies of papers.)</p>	
+				
 			<p><b>Completed Research</b></p>					
 				<UL type = "square">	
 				<LI><p> <em>"A Network Model of Wealth Inequality and Financial Instability."</em> [Job market paper] </p>
