--- a/researchstatement.html
+++ b/researchstatement.html
@@ -40,7 +40,7 @@
 			
 			<p>With the increasing availability of detailed inequality data, my research creates a new field examining the consequences from changing inequality while simultaneously bridging economic fields and bringing together interdisciplinary researchers. The list below provides brief descriptions of completed research projects, working papers, and ongoing work. </p>	
 			
-			<p>(Please go back to the <a href="research.html">research</a> tab for .pdf copies of papers.)</p>	
+			<p>(Please go back to the <a href="research.html"><font color = "black">research</font></a> tab for .pdf copies of papers.)</p>	
 				
 			<p><b>Completed Research</b></p>					
 				<UL type = "square">	
