--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@
 
 		<article>
 			<div class="article_image">
-					<img src="img/eg3gamma165.jpg" alt="" title="">
+					<img src="img/predict_crisisL_US.jpg" alt="" title="">
 			</div>
 			<div class = "post">
 				<h1 class = "title">Completed Research </h1>
@@ -53,8 +53,11 @@
 				<p><b>Abstract:</b> This paper investigates the relationship between wealth inequality and financial crises. While substantiation of a role for income inequality is ambiguous in the literature, we present evidence suggesting a unique capacity for the accumulation of assets on the likelihood of a financial crisis episode. Testing long-run panel data for nine countries with a reduced form, two-way fixed effects model,  estimates suggest that increasing wealth inequality, in an economy with high levels of aggregate wealth as measured by the wealth-income ratio, has a significantly positive and increasing marginal effect on the likelihood of financial crises, particularly stock market crashes. Predicted probabilities closely track the incidence of financial crises in the United States and United Kingdom over the past century. We argue these results reveal an important role for the distribution of accumulated assets in the macro-financial stability of rich countries. The distribution of stocks may capture structural vulnerabilities that the distribution of flows cannot expose. An economic network hypothesis is proposed for interpreting these results.</p>
 				<a class="read_more" href="papers/WineqInstability_empirics.pdf">.pdf <i class="read_more_arrow"></i> </a>
 				<br><br>
-				
-				<br><br>
+
+			<div class="article_image">
+					<img src="img/eg3gamma165.jpg" alt="" title="">
+			</div>
+			<div class = "post">	
 				<a name = "JMP"></a>
 				<p><b>A Network Model of Wealth Inequality and Financial Instability</b> [<font color = "dark blue">Job market paper</font>]</p>
 				
