--- a/research.html
+++ b/research.html
@@ -41,11 +41,19 @@
 
 		<article>
 			<div class="article_image">
-					<img src="img/predict_crisisL_US.jpg" alt="" title="">
+					<img src="img/blank.jpg" alt="" title="">
 			</div>
 			<div class = "post">
 				<h1 class = "title">Completed Research </h1>
-				
+			</div>
+		</article>	
+		<article>
+			<div class="article_image">
+					<img src="img/predict_crisisL_US.jpg" alt="" title="">
+			</div>
+		</article>
+		<article>
+			<div class = "post">
 				<p><b>Aggregate Wealth and Its Distribution as Determinants of Financial Crises</b></p>
 								
 				<p><i>Journal of Economic Inequality </i>, Submitted for Initial Review.</p>
