--- a/teaching.html
+++ b/teaching.html
@@ -44,7 +44,15 @@
 				<h1 class = "title"> <a href ="3410evaluations.html">Student Evaluations </a> </h1>
 			</div>
 		</article>
-			
+		
+		<article>
+			<div class="article_image">
+					<img src="img/blank.jpg" alt="" title="">
+			</div>
+			<div class = "post">
+				<h1 class = "title"> <a href ="teachingobservations.html">Teaching Observations </a> </h1>
+			</div>
+		</article>
 		
 		<article>
 			<div class="article_image">
@@ -57,7 +65,7 @@
 				</h1>
 				
 				<p> <b>Fundamental Methods of Mathematical Economics I (ECO3410)</b> <br> <br></p>
-				
+				(Click on semester for syllabus and course materials.)
 				<UL type = "square">
 					<LI><p><a href="spring2016.html"><font color="black">Spring 2016</font></a></p>		
 					<LI><p><a href="fall2015.html"><font color="black">Fall 2015</font></a></p>		
