--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@
 				</h1>
 				
 				<p> <b>Fundamental Methods of Mathematical Economics I (ECO3410)</b> <br> <br></p>
-				(Click on semester for syllabus and course materials.)
+				<p>(Click on semester for syllabus and course materials.)</p>
 				<UL type = "square">
 					<LI><p><a href="spring2016.html"><font color="black">Spring 2016</font></a></p>		
 					<LI><p><a href="fall2015.html"><font color="black">Fall 2015</font></a></p>		
