--- a/teachingobservations.html
+++ b/teachingobservations.html
@@ -39,9 +39,9 @@
 				<p><b>Brooklyn College: Fundamental Methods of Mathematical Economics I (ECO3410)</b><br><br></p>
         
 					<UL type = "square">
-						<LI><p> Fall 2015</p>
-						<LI><p> Spring 2015</p>
-						<LI><p> Fall 2014</p>
+						<LI><p> <a href="courses/T. Hauner Observation by C. Wang Fall 2015.pdf">Fall 2015</a> (observed by Prof. Chun Wang)</p>
+						<LI><p> <a href="courses/T. Hauner Observation by N. Doytch Spring 2015.pdf">Spring 2015</a> (observed by Prof. Nadia Doytch)</p>
+						<LI><p> <a href="courses/T. Hauner Observation by N. Doytch.pdf">Fall 2014</a> (observed by Prof. Doytch)</p>
 					</UL>
 				
 			</div>
