--- a/teachingphilosophy.html
+++ b/teachingphilosophy.html
@@ -53,7 +53,7 @@
 					
 					<UL type = "square">
 						<LI><p>Principles of Macroeconomics </p>
-						<LI><p>Fundamental Methods of Mathematical Economcis</p>
+						<LI><p>Fundamental Methods of Mathematical Economics</p>
 					</UL>
 				
 				<p><b>Courses Willing to Teach</b></p>
