--- a/research.html
+++ b/research.html
@@ -49,7 +49,7 @@
 		</article>	-->
 		<article>
 			<div class="article_image">
-					<img src="img/predict_crisisL_US.eps" alt="" title="">
+					<img src="img/predict_crisisL_US.png" alt="" title="">
 			</div>	
 			<div class = "post">
 				<p><b>Aggregate Wealth and Its Distribution as Determinants of Financial Crises</b></p>
