--- a/research.html
+++ b/research.html
@@ -52,9 +52,7 @@
 					<img src="img/predict_crisisL_US.png" alt="" title="">
 			</div>	
 			<div class = "post">
-				<p><b>Aggregate Wealth and Its Distribution as Determinants of Financial Crises</b></p>
-								
-				<p><i>Journal of Economic Inequality </i>, Submitted for Initial Review.</p>
+				<p><b>Aggregate Wealth and Its Distribution as Determinants of Financial Crises</b>. <i>Journal of Economic Inequality </i> (Submitted for Initial Review)</p>
 		
 				<p><b>Abstract:</b> This paper investigates the relationship between wealth inequality and financial crises. While substantiation of a role for income inequality is ambiguous in the literature, evidence is presented  suggesting a unique capacity for the accumulation of assets to increase the likelihood of a financial crisis episode. Testing long-run panel data for nine countries with a reduced form, two-way fixed effects model,  estimates suggest that increasing wealth inequality, in an economy with high levels of aggregate wealth as measured by the wealth-income ratio, has a significantly positive and increasing marginal effect on the likelihood of financial crises, particularly stock market crashes. Predicted probabilities closely track the incidence of financial crises in the United States and United Kingdom over the past century. It is argued that such results reveal an important role for the distribution of accumulated assets in the macro-financial stability of rich countries. The distribution of stocks may capture structural vulnerabilities that the distribution of flows cannot expose, and hence more unequal countries in wealth face greater financial instability. An economic network hypothesis is proposed for interpreting these results.</p>
 				<a class="read_more" href="papers/WineqInstability_empirics_JOEI.pdf">.pdf <i class="read_more_arrow"></i> </a>
@@ -95,9 +93,9 @@
 					<img src = "img/NLPunsharedTask_fig1.jpg" alt="" title="">
 			</div>
 			<div class = "post">
-				<p><b>Application of Social Network Analysis in the Estimation of Bank Financial Strength During the Financial Crisis.</b></p>
+				<p><b>Application of Social Network Analysis in the Estimation of Bank Financial Strength During the Financial Crisis</b>. (April 2014) <i>NLP Unshared Task in PoliInformatics.</i></p>
 								
-				<p>with Michelle Morales, David Guy Brizan, Hussein Ghaly, Min Ma, Syed Reza, and Andrew Rosenberg in <i>NLP Unshared Task in PoliInformatics,</i> 2014.</p>
+				<p>with Michelle Morales, David Guy Brizan, Hussein Ghaly, Min Ma, Syed Reza, and Andrew Rosenberg</p>
 		
 				<p><b>Abstract:</b> The Financial Crisis of 2007--2008 was a very complex and impactful global event. The goal of this research is to explore the possibility of using a bank’s social relations to estimate a bank’s financial strength. We apply Natural Language Processing techniques to a corpus of financial data released by the NLP Unshared Task in PoliInformatics in 2014 in order to explore and better understand this possibility. Our work begins with the extraction of named entities from the corpus to establish names of people involved in the crisis. We then aggregate the social histories of these individuals from an online collaborative knowledge base: Freebase. Accordingly, we use the social histories of entities to establish social connections between them. We end with a visualization of the connections we found: a presentation of a social financial crisis network. </p>
 				<a class="read_more" href="papers/NLPunsharedTaks_application social network (2014).pdf">.pdf <i class="read_more_arrow"></i> </a>
