--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
 	<section class="main wrapper">
 	
 	
-		<article>
+<!--		<article>
 			<div class="article_image">
 					<img src="img/blank.jpg" alt="" title="">
 			</div>
@@ -39,7 +39,7 @@
 			</div>
 		</article>
 
-<!--		<article>
+		<article>
 			<div class="article_image">
 					<img src="img/blank.jpg" alt="" title="">
 			</div>
@@ -71,6 +71,19 @@
 				
 				<p><b>Abstract:</b> A theoretical financial network model is proposed for understanding the relationship between wealth inequality and financial crises, or instability.  Financial assets link individual asset and liability holders to form a static economic network. The total number of financial assets an individual owns represents their <i>in-degree</i> and the distribution of those assets is imposed by an <i>in-degree distribution</i>---equivalent to the wealth distribution. A network's topology varies with the level of wealth inequality and total wealth, and together they determine network contagion in the event of a random negative income shock to an individual. Simulations demonstrate that increasing wealth inequality, imposed exogenously through the degree distribution's skewness parameter, makes a wealthy network less stable---as measured by the share of individuals failing financially. Aggregate wealth also has an inverted U-shaped effect on the model's network stability. The simulation results suggest a unique structural role for the distribution of accumulated assets in macro-financial stability.</p>
 				<a class="read_more" href="papers/WineqInstability_theory.pdf">.pdf <i class="read_more_arrow"></i> </a>
+				<br><br>
+			</div>	
+ 		</article>
+		
+				<article>
+			<div class="article_image">
+					<img src="img/blank.jpg" alt="" title="">
+			</div>	
+			<div class = "post">
+				<p><b>Instability, Credit, and Inequality in the Twentieth Century</b></p>
+				<p><font color="dark blue">Working Paper:</font> May 2017 </p>	
+				
+				<p><b>Abstract:</b> This paper studies the long-run relationship between financial instability, wealth inequality and aggregate wealth, and household debt. Specifically, it examines whether wealth inequality and aggregate wealth are contributing forces to the level of financial instability in the United States over the 20th century, or whether debt is a more crucial lever. A more traditional role for income inequality is also investigated and compared, in which its long-run increases may add to household debt and, from there, to a financial crisis. Applying a vector autoregression model, which assumes the endogeneity of the variables, and studying any cointegrating relations provides statistical validity to these relationships through rigorous specification and hypothesis testing. Results show that wealth inequality, acting in concert with the large accumulation of aggregate financial wealth, contributes significantly and positively to financial instability. A second long-run relationship is found between household debt and wealth inequality, whereby increases in financial instability are the main adjusting force back to stationary levels. Less robust evidence is found strongly linking household debt to financial instability, though income inequality does significantly contribute to debt long-term. Together, these results emphasize the important role for the distribution of accumulated wealth in the stability of the US economy.</p>				
 				<br><br>
 			</div>	
  		</article>
