--- a/teaching.html
+++ b/teaching.html
@@ -27,7 +27,7 @@
 
 	<section class="main wrapper">
 		
-		<article>
+<!--		<article>
 			<div class="article_image">
 					<img src="img/blank.jpg" alt="" title="">
 			</div>
@@ -53,7 +53,7 @@
 				<h1 class = "title"> <a href ="teachingobservations.html">Teaching Observations </a> </h1>
 			</div>
 		</article>
-		
+-->		
 		<article>
 			<div class="article_image">
 					<img src="img/BCgate.JPG" alt="" title="">
