--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
 		
 		<article>
 			<div class="article_image">
-					<img src="img/blank.jpg" alt="" title="">
+					<img src="img/binscatter_lnmilpercap_nfa_control_netw_gdppc.png" alt="" title="">
 			</div>	
 			<div class = "post">
 				<p><b>Inequality, Foreign Investment, and Imperialism</b></p>
