--- a/research.html
+++ b/research.html
@@ -60,7 +60,7 @@
 				
 				<p><b>Abstract:</b> We present an empirical restatement of the classical economic theory of imperialism and the origins of World War I. Using recent data, we show 1) inequality was at historical highs in all the advanced belligerent countries at the turn of the century, 2) rich wealth holders invested more of their assets abroad, 3) risk-adjusted foreign returns were higher than risk-adjusted domestic returns, 4) establishing direct political control decreased the riskiness of foreign assets, 5) increased inequality was associated with higher share of foreign assets in GDP, and 6) increased share of foreign assets was correlated with higher levels of military mobilization. Together, these facts suggest that the classic theory of imperialism may have some empirical support.</p>
 				<a class="read_more" href="https://www.dropbox.com/s/3e6jny1s7mp91ac/imperialism_forcirculation.pdf?dl=0">.pdf <i class="read_more_arrow"></i> </a>
-				
+				<a class="read_more" href="https://promarket.org/inequality-imperialism-first-world-war/">Booth blog post<i class="read_more_arrow"></i> </a>
 				<br><br>
 			</div>	
  		</article>
