--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				
 				<p>Prior to graduate school, I worked as an economist for the 
 				<a href ="http://www.ascap.com/about/"><font color="black">American Society of Composers, Authors and Publishers</font></a> (ASCAP) for five years, 
-				while moonlighting as a <a href="http://www.popmatters.com/archive/contributor/295/"><font color = "black">concert photographer</font></a> in New York City. 
+				while moonlighting as a <a href="https://www.popmatters.com/community/thomas_hauner"><font color = "black">concert photographer</font></a> in New York City. 
 				I almost always prefer to be skiing, swimming, or sailing. And as a proud Czech from Madison, WI, I adore all things Wisconsin and &#268esky.</p>
 										
 				<br><br><br><br>			
