--- a/research.html
+++ b/research.html
@@ -53,8 +53,8 @@
 					<img src="img/binscatter_lnmilpercap_nfa_control_netw_gdppc.png" alt="" title="">
 			</div>	
 			<div class = "post">
-				<p><b>Inequality, Foreign Investment, and Imperialism</b></p>
-				<p><font color="dark blue"><b>NEW</b> Working Paper:</font> November 2017 </p>	
+				<p><b>Inequality, Foreign Investment, and Imperialism</b>. <i>Economic History Review</i> (Submitted for initial review April 2018)</p>
+				<p><font color="dark blue"><b>NEW</b> Working Paper:</font> December 2017 </p>	
 				
 				<p> with Branko Milanovic (CUNY Graduate Center) and Suresh Naidu (Columbia) </p>
 				
@@ -71,7 +71,7 @@
 					<img src="img/predict_crisisL_US.png" alt="" title="">
 			</div>	
 			<div class = "post">
-				<p><b>Aggregate Wealth and Its Distribution as Determinants of Financial Crises</b>. <i>Journal of Economic Inequality </i> (Submitted for Initial Review Jan. 2017)</p>
+				<p><b>Aggregate Wealth and Its Distribution as Determinants of Financial Crises</b>. <i>Journal of Economic Inequality </i> (Revise and resubmit)</p>
 		
 				<p><b>Abstract:</b> This paper investigates the relationship between wealth inequality and financial crises. While substantiation of a role for income inequality is ambiguous in the literature, evidence is presented  suggesting a unique capacity for the accumulation of assets to increase the likelihood of a financial crisis episode. Testing long-run panel data for nine countries with a reduced form, two-way fixed effects model,  estimates suggest that increasing wealth inequality, in an economy with high levels of aggregate wealth as measured by the wealth-income ratio, has a significantly positive and increasing marginal effect on the likelihood of financial crises, particularly stock market crashes. Predicted probabilities closely track the incidence of financial crises in the United States and United Kingdom over the past century. It is argued that such results reveal an important role for the distribution of accumulated assets in the macro-financial stability of rich countries. The distribution of stocks may capture structural vulnerabilities that the distribution of flows cannot expose, and hence more unequal countries in wealth face greater financial instability. An economic network hypothesis is proposed for interpreting these results.</p>
 				<a class="read_more" href="papers/WineqInstability_empirics_JOEI.pdf">.pdf <i class="read_more_arrow"></i> </a>
