--- a/research.html
+++ b/research.html
@@ -85,8 +85,7 @@
 					<img src="img/baseline_d1-2_symbols_c3.png" alt="" title="">
 			</div>	
 			<div class = "post">
-				<p><b>Network Defect: Wealth Inequality, Network Topology and Financial Crisis</b></p>
-				<p><font color="dark blue">Working Paper:</font> March 2017 </p>	
+				<p><b>Wealth Inequality, Network Topology and Financial Crisis</b><i>Economic Theory</i> (Submitted for initial review December 2018)</p>	
 				
 				<p><b>Abstract:</b> A theoretical financial network model is proposed for understanding the relationship between wealth inequality and financial crises, or instability.  Financial assets link individual asset and liability holders to form a static economic network. The total number of financial assets an individual owns represents their <i>in-degree</i> and the distribution of those assets is imposed by an <i>in-degree distribution</i>---equivalent to the wealth distribution. A network's topology varies with the level of wealth inequality and total wealth, and together they determine network contagion in the event of a random negative income shock to an individual. Simulations demonstrate that increasing wealth inequality, imposed exogenously through the degree distribution's skewness parameter, makes a wealthy network less stable---as measured by the share of individuals failing financially. Aggregate wealth also has an inverted U-shaped effect on the model's network stability. The simulation results suggest a unique structural role for the distribution of accumulated assets in macro-financial stability.</p>
 				<a class="read_more" href="papers/WineqInstability_theory.pdf">.pdf <i class="read_more_arrow"></i> </a>
