--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 				
 				<!-- <p>My AEA JOE candidate profile is <a href = "https://www.aeaweb.org/joe/candidates/candidate_profile_view.php?jcand=122476"><font color = "black">here</font></a>.</p> -->
 				
-				<p>Prior to graduate school at the <a href = "https://gc.cuny.edu/Page-Elements/Academics-Research-Centers-Initiatives/Doctoral-Programs/Economics">
-				<font color = "black>City University of New York (CUNY)</font></a>, I worked as an economist for the 
+				<p>Prior to graduate school at the <a href ="https://gc.cuny.edu/Page-Elements/Academics-Research-Centers-Initiatives/Doctoral-Programs/Economics">
+				<font color ="black">City University of New York</font></a> (CUNY), I worked as an economist for the 
 				<a href ="http://www.ascap.com/about/"><font color="black">American Society of Composers, Authors and Publishers</font></a> (ASCAP) for five years, 
 				while moonlighting as a <a href="https://www.popmatters.com/community/thomas_hauner"><font color = "black">concert photographer</font></a> in New York City. 
 				I almost always prefer to be on snow or in water. And as a proud Czech from Madison, WI, I adore all things Wisconsin and &#268esky.</p>
