--- a/research.html
+++ b/research.html
@@ -48,6 +48,20 @@
 			</div>
 		</article>	-->
 		
+				<article>
+			<div class="article_image">
+					<img src="img/baseline_d1-2_symbols_c3.png" alt="" title="">
+			</div>	
+			<div class = "post">
+				<p><b>Wealth Inequality, Network Topology and Financial Instability</b><i>Journal of Income Distribution</i> (2021) doi:10.25071/1874-6322.40445 <a href="https:doi.org/10.25071/1874-6322.40445"><font color = "black">link</font></a> </p>
+				
+				<p><b>Abstract:</b>This article asks ’if two otherwise identical economies were distinguishedonly by their distributions of wealth, are they equally stable in response toa random shock?’  A theoretical financial network model is proposed tounderstand the relationship between wealth inequality and financial crises.In a financial network, financial assets link individual asset and liabilityholders to form a web of economic connections. The total connectivity of anindividual is described bydegree; the overall distribution of connections inthe network is imposed through adegree  distribution– equivalent to thewealth distribution – as incoming connections represent assets and outgoingconnections, liabilities. A network’s topology varies with the level of wealthinequality and total wealth and simulations show that together,  theydetermine network contagion in the event of a random negative incomeshock to some individuals.  Random network simulations, whereby eachfinancial connection is randomly placed,  reveal that increasing wealthinequality makes a wealthy network less stable – as measured by the shareof individuals failing financially or the decline in financial asset values.These results suggest a unique architectural role for accumulated assets andtheir distribution in macro-financial stability.</p>
+				<a class="read_more" href="papers/Hauner_Winequality network topology and financial instability (JID 2021).pdf">.pdf <i class="read_more_arrow"></i> </a>
+				<!-- <a class="read_more" href="data/WineqInstability_replication.zip">replication files<i class="read_more_arrow"></i> </a> -->
+				<br><br>
+			</div>	
+ 		</article>
+		
 		
 		<article>
 			<div class="article_image">
@@ -82,23 +96,7 @@
  		</article>
 		
 		
-
-		
-
 		<article>
-			<div class="article_image">
-					<img src="img/baseline_d1-2_symbols_c3.png" alt="" title="">
-			</div>	
-			<div class = "post">
-				<p><b>Wealth Inequality, Network Topology and Financial Crisis</b><i>Journal of Income Distribution</i> (Forthcoming)</p>	
-				
-				<p><b>Abstract:</b> A theoretical financial network model is proposed for understanding the relationship between wealth inequality and financial crises, or instability.  Financial assets link individual asset and liability holders to form a static economic network. The total number of financial assets an individual owns represents their <i>in-degree</i> and the distribution of those assets is imposed by an <i>in-degree distribution</i>---equivalent to the wealth distribution. A network's topology varies with the level of wealth inequality and total wealth, and together they determine network contagion in the event of a random negative income shock to an individual. Simulations demonstrate that increasing wealth inequality, imposed exogenously through the degree distribution's skewness parameter, makes a wealthy network less stable---as measured by the share of individuals failing financially. Aggregate wealth also has an inverted U-shaped effect on the model's network stability. The simulation results suggest a unique structural role for the distribution of accumulated assets in macro-financial stability.</p>
-				<a class="read_more" href="papers/WineqInstability_theory.pdf">.pdf <i class="read_more_arrow"></i> </a>
-				<br><br>
-			</div>	
- 		</article>
-		
-				<article>
 			<div class="article_image">
 					<img src="img/blank.jpg" alt="" title="">
 			</div>	
